tests/compile_fail/superstate/not_on_impl.rs
mod blinky {
    use moku::*;

    struct Top {}

    #[superstate(Top)]
    struct Bottom {}
}

fn main() {}
