tests/compile_fail/superstate/not_on_impl.stderr
error: expected `impl`
 --> tests/compile_fail/superstate/not_on_impl.rs:7:5
  |
7 |     struct Bottom {}
  |     ^^^^^^
